Say the release is current, matching the book-wide sweep
The three pages here said the build is on Java 25; #915 settles the
form the book uses for a version it expects to move off, so these say
"built on Java 25 today" too, and put the reason in the same terms: a
later JDK waits on the library moving to it, not on a version bump.